src/objects/donation__c.object
<CustomObject>
    <fields>
        <fullName>amount__c</fullName>
        <label>amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>customer_id__c</fullName>
        <label>customer_id</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>donation_type__c</fullName>
        <label>donation_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organization_id__c</fullName>
        <label>organization_id</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>program_id__c</fullName>
        <label>program_id</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>store_id__c</fullName>
        <label>store_id</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>donation</label>
    <nameField>
        <label>donation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>